# mt5-term

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.json.example  test_connection.py
docs/: CHANGELOG.md  QUICKSTART.md  SETUP_GUIDE.md
python/: config.py  mt5_service.py  requirements.txt
src/: app.rs  config.rs  main.rs  setup.rs  ui.rs
src/models/: account.rs  data.rs  mod.rs  position.rs
